@@ -7,6 +7,10 @@ CHANGES
 - Support multiple Google groups.  The authenticating user has to be a member
   of any one of them for access to be allowed.
 
+- Added add-google-users new option --exclude to skip adding some users
+  (e.g. the 'admin' user might clash with an existing 'admin' group, causing
+  the script to fail).
+
 - Added add-google-users option --add-to-group as a more meaningful alias for
   the old --admin-group option.
 
